--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,4 +1,8 @@
+<head>
+  <script type= "text/javascript" src = "countries.js"></script>
+</head>
 <%= form_for(@event) do |f| %>
+<div class="form-group">
   <% if @event.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
@@ -13,37 +17,44 @@
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title , class: 'form-control' %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description , class: 'form-control'%>
   </div>
   <div class="field">
-    <%= f.label :startdate %><br>
-    <%= f.date_select :startdate %>
+    <%= f.label 'Start Date' %><br>
+    <%= f.date_field :startdate , class: 'form-control' %>
   </div>
   <div class="field">
-    <%= f.label :enddate %><br>
-    <%= f.date_select :enddate %>
+    <%= f.label 'End Date'%><br>
+    <%= f.date_field :enddate  , class: 'form-control'%>
+  </div>
+  
+  <div class="field">
+    <%= f.label :country %><br>
+    <%= f.select(:country, [], {}, { :class => 'form-control' ,:id => 'country'})%>
   </div>
   <div class="field">
     <%= f.label :city %><br>
-    <%= f.text_field :city %>
+    <%= f.select(:city,  [],{}, { :class => 'form-control' ,:id => 'state'}) %>
   </div>
-  <div class="field">
-    <%= f.label :country %><br>
-    <%= f.text_field :country %>
-  </div>
+    <script language="javascript">
+      populateCountries("country", "state");
+   </script>
   <div class="field">
     <%= f.label :address %><br>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, class: 'form-control' %>
   </div>
   <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
+    <%= f.hidden_field :user_id , value: 1 %>
+  </div>
+  <div class="field">
+    <%= f.hidden_field :group_id , value: 1 %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit' , class: 'btn btn-success' %>
+  </div>
   </div>
 <% end %>
