--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing Event</h1>
-
+<h4><%= link_to 'Back', @event %></h4>
+<center><h1>Editing Event</h1></center>
 <%= render 'form' %>
 
-<%= link_to 'Show', @event %> |
-<%= link_to 'Back', events_path %>
