--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Event</h1>
-
+<h4><%= link_to '<<Back', events_path %></h4>
+<center><h1>New Event</h1></center>
 <%= render 'form' %>
 
-<%= link_to 'Back', events_path %>
+
