--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Post</h1>
-
+<h4><%= link_to 'Back', @post %> </h4>
+<center><h1>Editing Post</h1></center>
 <%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+
+
