--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Group</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">New Group</span>
+		</h1>
+		<%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', groups_path %>
+		<%= link_to 'Back', groups_path %>
+		</div>
+	</div>
+</div>
