--- a/app/views/interests/new.html.erb
+++ b/app/views/interests/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Interest</h1>
-
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">New Interest</span>
+		</h1>
 <%= render 'form' %>
 
 <%= link_to 'Back', interests_path %>
+		</div>
+	</div>
+</div>
