--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Group</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">Editing Group</span>
+		</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
 
-<%= link_to 'Show', @group %> |
-<%= link_to 'Back', groups_path %>
+		<%= link_to 'Show', @group %> |
+		<%= link_to 'Back', groups_path %>
+		</div>
+	</div>
+</div>
