--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,12 @@
-<h4><%= link_to '<<Back', events_path %></h4>
-<center><h1>New Event</h1></center>
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+<span class="label label-default">New Event</span>
+</h1>
 <%= render 'form' %>
 
-
+<%= link_to 'Back', events_path %>
+</div>
+</div>
+</div>
