--- a/app/views/interests/edit.html.erb
+++ b/app/views/interests/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing Interest</h1>
-
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+<span class="label label-default">Editing Interest</span>
+</h1>
 <%= render 'form' %>
 
 <%= link_to 'Show', @interest %> |
 <%= link_to 'Back', interests_path %>
+</div>
+</div>
+</div>
+
