--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,14 +1,21 @@
+<div class="container">
+	<div class="row">
+		<div class="col-md-offset-3 col-md-6">
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Interestname:</strong>
-  <%= @interest.interestname %>
+  <h3><strong>Interestname:</strong></h3>
+  <h4><%= @interest.interestname %></h4>
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @interest.user %>
+  <h3><strong>User:</strong></h3>
+  <h4><%= @interest.user.username %></h4>
 </p>
 
 <%= link_to 'Edit', edit_interest_path(@interest) %> |
 <%= link_to 'Back', interests_path %>
+</div>
+</div>
+</div>
+
