--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,6 @@
-<head> <script type= "text/javascript" src = "countries.js"></script> </head>
-<div class="row">
-<div class="col-md-6 col-md-offset-3">
 <%= form_for(@user) do |f| %>
  <% if @user.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" , class="form-group" >
     <div class="alert alert-danger">
       The form contains<%= pluralize(@user.errors.count, "error") %>
          </div>
@@ -15,47 +12,55 @@
     </div>
   <% end %>
 
-    <%= f.label :username %><br>
+    <div class="form-group">
+    <%= f.label :username %>
     <%= f.text_field :username ,class: 'form-control'%>
-  
-    <%= f.label :email %><br>
+    </div>
+    <div class="form-group">
+    <%= f.label :email %>
     <%= f.text_field :email ,class: 'form-control'%>
-
-
+    </div>
+    <div class="form-group">
     <%= f.label :password %>
     <% if @validatable %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <% end %>
     <%= f.password_field :password, autocomplete: "off" ,class: 'form-control'%>
-
+    </div>
+    <div class="form-group">
       <%= f.label :isadmin %>
     <%= f.check_box :isadmin %>
-<br>
+    </div>
+    <div class="form-group">
     <%= f.label :gender %>
-    <%= f.select :gender, User::GENDERS.map { |s| [("#{s}"), s] } %><br>
-
+    <%= f.select :gender ,User::GENDERS.map { |s| [("#{s}"), s] }%>
+    </div>
+    <div class="form-group">
     <%= f.label :age %>
     <%= f.number_field :age,class: 'form-control' %>
-
- <div class="field"> <%= f.label :country %><br> 
-<%= f.select(:country, [], {}, { :class => 'form-control' ,:id => 'country'})%> </div> 
-<div class="field"> 
-<%= f.label :city %><br> 
-<%= f.select(:city, [],{}, { :class => 'form-control' ,:id => 'state', :onclick=> 'addlocation()'}) %> 
-</div> 
-<script language="javascript"> populateCountries("country", "state"); 
-
-</script>
-
- <div class="form-group">
-    <%= f.hidden_field :latitude, class: "form-control", id: "latitude" %>
-  </div>
+    </div>
+    <div class="form-group">
+    <div class="field"> <%= f.label :country %> 
+    <%= f.select(:country, [], {}, { :class => 'form-control' ,:id => 'country'})%> </div> 
+    </div>
+    <div class="form-group">
+    <div class="field"> 
+    <%= f.label :city %>
+    <%= f.select(:city, [],{}, { :class => 'form-control' ,:id => 'state', :onclick=> 'addlocation()'}) %> 
+    </div> 
+    </div>
+    <script language="javascript"> 
+      populateCountries("country", "state"); 
+    </script>
 
     <div class="form-group">
-    <%= f.hidden_field :longitude, class: "form-control", id: "longitude" %>
-  </div>
+      <%= f.hidden_field :latitude, class: "form-control", id: "latitude" %>
+    </div>
 
-  <%= f.file_field :photo,class: 'form-control'%>
+    <div class="form-group">
+      <%= f.hidden_field :longitude, class: "form-control", id: "longitude" %>
+    </div>
+    <%= f.file_field :photo,class: 'form-control'%>
     <%= f.submit "Create my account", class: "btn btn-primary"%>
   
 <% end %>
