--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,4 +1,13 @@
-<h4><%= link_to 'Back', @event %></h4>
-<center><h1>Editing Event</h1></center>
-<%= render 'form' %>
+<div class="container">
+	<div class="row">
+		<%= link_to 'Back', @event %>
+		<div class="col-md-offset-3 col-md-6">
+			<h1>
+				<span class="label label-default">Editing Event</span>
+			</h1>
+			<%= render 'form' %>
+		</div>
+	</div>
+</div>
+
 
