--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -22,13 +22,15 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Startdate</th>
-      <th>Enddate</th>
+      <th>Start_date</th>
+      <th>End_date</th>
       <th>City</th>
       <th>Country</th>
       <th>Address</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th>Show</th>
+      <th>Edit</th>
+      <th>Destroy</th>
     </tr>
   </thead>
 
