--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing User</h1>
+<div class="container">
+	<div class="row">
+		<%= link_to 'Show', @user %> | 
+		<%= link_to 'Back', users_path %>
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">Editing User</span>
+		</h1>
+		<%= render 'form' %>
+		</div>
+	</div>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
