--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,11 +10,11 @@
 <div class="row">
     <p id="notice"><%= notice %></p>
     <div class="col-md-offset-10 ">
-      <%= link_to 'New Group', new_group_path %>
+      <%= link_to 'New User', new_user_path %>
     </div>
     <div class="col-md-12">
       <h1>
-        <span class="label label-default">Listing Groups</span>
+        <span class="label label-default">Listing Users</span>
       </h1>
       <div class="table-responsive">
         <table class="table table-hover">
@@ -28,7 +28,9 @@
       <th>Age</th>
       <th>Country</th>
       <th>City</th>
-      <th colspan="3"></th>
+      <th>Show</th>
+      <th>Edit</th>
+      <th>Destroy</th>
     </tr>
   </thead>
 
