--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -48,10 +48,10 @@
     <%= f.text_field :address, class: 'form-control' %>
   </div>
   <div class="field">
-    <%= f.hidden_field :user_id , value: 1 %>
+    <%= f.hidden_field :user_id , value: current_user.id %>
   </div>
   <div class="field">
-    <%= f.hidden_field :group_id , value: 15 %>
+    <%= f.hidden_field :group_id , value: @group_id %>
   </div>
   <div class="actions">
     <%= f.submit 'Submit' , class: 'btn btn-success' %>
