--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,11 +18,7 @@
 </div>
 <div class="row">
   <button class="pull-right btn btn-primary" id="btn_member" onclick="checkmember('<%= @event.id%>')">
-<%= @members[@members.length-1]['user_id']%>
-<%= current_user.id%>
-<%= @members[@members.length-1]['event_id'] %>
-<%= @event_id %>
-<%= @ismember%>
+
       <% if @ismember %>
           Un Join! 
     <% else %>
@@ -42,6 +38,7 @@
   <% end %>
 
 <% user= User.where("id= ?",post.user_id)%>
+<%= image_tag user[0].photo.url, width: '32', height: '32' %>
     <h4><span><%= user[0]['username'] %>:</span>
     <%= post.body %></h4>
     <h4><b>Comments:</b></h4>
@@ -59,6 +56,7 @@
    <% end %>
 
     <% user= User.where("id= ?",comment.user_id)%>
+    <%= image_tag user[0].photo.url, width: '32', height: '32' %>
     <h4><span><%= user[0]['username'] %>:</span>
     <%= comment.body %></h4>
     </div>
