--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,6 +8,11 @@
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 <body onload="getLocation()">
+<hr>
+<div class="row">
+<img src=<%=asset_path('meeting.png')%>  width="100%" height="100%">
+</div>
+
 <div class="row">
         <div class="col-md-6 pull-right">
             <div id="custom-search-input">
@@ -22,6 +27,11 @@
             </div>
         </div>
 	</div><br>
+		<% if current_user %>
+		<div class="row">
+		<%= link_to 'Create New Group',new_group_path ,class: 'btn btn-primary'%>
+		</div>
+	<% end %>
 <div class="row">
 	<div class="col-md-6" id="data">
 	</div>
@@ -44,11 +54,7 @@
 			</div>
 		</div>
 	</div>
-	<% if current_user %>
-		<div class="row pull-right">
-		<%= link_to 'Create New Group',new_group_path ,class: 'btn btn-info'%>
-		</div>
-	<% end %>
+
 </div>
 <script>
 var latitude=null;
