--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,9 @@
     <div class="container">
       <div id="user-widget">
       <% if current_user %>
+      <%= image_tag current_user.photo.url, width: '32', height: '32' %>
       Welcome <strong><%= current_user.username %></strong>!
       <%= link_to "Sign out", logout_path, id: "sign_out" %>
-    <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
    <% end %>
         <%= yield %>
   </div>
