--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,13 +11,13 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.text_area :body , class: 'form-control' %>
   </div>
-  <div class="field">
+  <div class="form-group">
       <%= f.hidden_field :post_id %>
   </div>
-  <div class="field">
+  <div class="form-group">
       <%= f.hidden_field :user_id %>
   </div>
   <div class="actions">
