--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,8 +1,20 @@
-<% @post_id=@comment.post_id
-    @post=Post.where("id = ?", @post_id)
-    @event_id=@post[0]['event_id']%>
-<a href="http://localhost:3000/events/<%= @event_id%>">Back</a> 
-<center><h1>Editing Comment</h1></center>
-<%= render 'form' %>
+<div class="container">
+	<div class="row">
+		<% @post_id=@comment.post_id
+	    @post=Post.where("id = ?", @post_id)
+	    @event_id=@post[0]['event_id']%>
+		<a href="http://localhost:3000/events/<%= @event_id%>">Back</a> 
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">Editing Comment</span>
+		</h1>
+
+		<%= render 'form' %>
+		</div>
+	</div>
+</div>
+
+
+
 
 
