--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.isadmin %>
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Comments</h1>
@@ -29,3 +30,19 @@
 <br>
 
 <%= link_to 'New Comment', new_comment_path %>
+<%else%>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-danger" style="margin-top: 150px">
+      <div class="panel-heading" > 
+        <h3 class="panel-title">
+        Error 
+        </h3>
+      </div>
+      <div class="panel-body">
+        <p>You can't access this url </p>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
