--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,28 @@
-<h1>New Comment</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', comments_path %>
+<% if current_user.isadmin %>
+<div class="container">
+	<div class="row">
+		<%= link_to 'Back', comments_path %>
+	<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">New Comment</span>
+		</h1>
+		<%= render 'form' %>
+		</div>
+	</div>
+</div>
+<%else%>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-danger" style="margin-top: 150px">
+      <div class="panel-heading" > 
+        <h3 class="panel-title">
+        Error 
+        </h3>
+      </div>
+      <div class="panel-body">
+        <p>You can't access this url </p>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
