--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
 	<div class="row">
-		<%= link_to 'Back', events_path %>
+	  <% if current_user.isadmin %>
+      <%= link_to 'Back', events_path %>
+    <%else%>
+      <a href="/groups/<%=@group_id%>">Back</a>
+    <%end%>
 		<div class="col-md-offset-3 col-md-6">
 			<h1>
 				<span class="label label-default">New Event</span>
