--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,13 @@
 
 <div class="row ">
 <div class="col-md-6 ">
-<h4><%= link_to 'Back', events_path %> </h4>
+<h4>
+     <% if current_user.isadmin %>
+      <%= link_to 'Back', events_path %>
+    <%else%>
+      <a href="/groups/<%=@event.group_id%>">Back</a>
+    <%end%>
+    </h4>
 </div>
 <% if current_user.id == @event.user_id  || current_user.isadmin %>
 <div class="col-md-2 pull-right"><h4><%= link_to 'Edit', edit_event_path(@event) %>|<%= link_to 'Delete', @event, method: :delete, data: { confirm: 'Are you sure?' } %></h4>
@@ -67,6 +73,7 @@
     <% end %>
     
     <div class="row">
+    <% if @ismember %>
         <div class="col-md-3 panel panel-default ">
       <div class="panel-body">
                 <%= form_for :comment, url: comments_path do |form| %>
@@ -90,13 +97,13 @@
         </div>
         
         </div>
+        <% end %>
     </div>
 </div>
 </div>
 <% end %>
 
-
-
+<% if @ismember %>
 <div class="row col-md-6 panel panel-default">
   <div class="panel-body">
     <%= form_for :post, url: posts_path do |f| %>
@@ -118,6 +125,7 @@
 <% end %>
   </div>
 </div>
+<% end %>
 <script type="text/javascript">
   function checkmember(event_id){
     var check=document.getElementById("btn_member").innerHTML;
