--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,6 +1,10 @@
 <div class="container">
 	<div class="row">
-	<%= link_to 'Back', "http://localhost:3000/", class: "row" %>
+	     <% if current_user.isadmin %>
+      <%= link_to 'Back', groups_path %>
+    <%else%>
+	<%= link_to 'Back', "http://localhost:3000/" %>
+    <%end%>
 		<div class="col-md-offset-3 col-md-6">
 		<h1>
 			<span class="label label-default">New Group</span>
