--- a/app/views/interests/index.html.erb
+++ b/app/views/interests/index.html.erb
@@ -1,3 +1,4 @@
+<% if current_user.isadmin %>
 <div class="container">
 <div class="row">
 <ul class="nav nav-tabs">
@@ -47,5 +48,21 @@
       </div>
   </div>
 </div>
+<%else%>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-danger" style="margin-top: 150px">
+      <div class="panel-heading" > 
+        <h3 class="panel-title">
+        Error 
+        </h3>
+      </div>
+      <div class="panel-body">
+        <p>You can't access this url </p>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
 
 
