--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Post</h1>
+<div class="container">
+	<div class="row">
+		<%= link_to 'Show', @post %> |
+		<%= link_to 'Back', posts_path %>
+		<%= link_to 'Show', @group %> |
+		<div class="col-md-offset-3 col-md-6">
+		<h1>
+			<span class="label label-default">Editing Post</span>
+		</h1>
 
-<%= render 'form' %>
+		<%= render 'form' %>
+		</div>
+	</div>
+</div>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
