--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
+<% if current_user.isadmin %>
 <p id="notice"><%= notice %></p>
-
 <h1>Listing Posts</h1>
 
 <table>
@@ -29,3 +29,19 @@
 <br>
 
 <%= link_to 'New Post', new_post_path %>
+<%else%>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-danger" style="margin-top: 150px">
+      <div class="panel-heading" > 
+        <h3 class="panel-title">
+        Error 
+        </h3>
+      </div>
+      <div class="panel-body">
+        <p>You can't access this url </p>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
