--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,32 @@
-<h1>New Post</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', posts_path %>
+<% if current_user.isadmin %>
+<div class="container">
+  <div class="row">
+       <% if current_user.isadmin %>
+      <%= link_to 'Back', posts_path %>
+    <%else%>
+  <%= link_to 'Back', "http://localhost:3000/" %>
+    <%end%>
+    <div class="col-md-offset-3 col-md-6">
+    <h1>
+      <span class="label label-default">New Post</span>
+    </h1>
+    <%= render 'form' %>
+    </div>
+  </div>
+</div>
+<%else%>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-danger" style="margin-top: 150px">
+      <div class="panel-heading" > 
+        <h3 class="panel-title">
+        Error 
+        </h3>
+      </div>
+      <div class="panel-body">
+        <p>You can't access this url </p>
+      </div>
+    </div>
+  </div>
+</div>
+<%end%>
