--- a/app/views/user_notifier/send_signup_email.erb
+++ b/app/views/user_notifier/send_signup_email.erb
@@ -4,8 +4,7 @@
   </head>
   <body>
     <h1>Thanks for signing up, <%= @user.username %>!</h1>
-    <p>Thanks for joining and have a great day! Now sign in and do
-awesome things!</p>
+    <p>Thanks for joining and have a great day! Now sign in and do awesome things!</p>
   </body>
 </html>
 
