--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,11 +27,13 @@
     <% end %>
     <%= f.password_field :password, autocomplete: "off" ,class: 'form-control'%>
     </div>
+    <%if current_user != nil %>
     <% if current_user.isadmin %>
     <div class="form-group">
       <%= f.label :isadmin %>
     <%= f.check_box :isadmin %>
     </div>
+    <% end -%>
     <% end -%>
     <div class="form-group">
     <%= f.label :gender %>
